--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -37,6 +37,14 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_blue_plus: ^1.32.12
   permission_handler: ^11.3.1
+  google_maps_flutter: ^2.10.1
+  shared_preferences: ^2.5.2
+  geolocator: ^13.0.2
+  path_provider: ^2.1.5
+  xml: ^6.5.0
+  fit_parser: ^2.0.0
+  file_picker: ^9.1.0
+  gpx: ^2.3.0
 
 dev_dependencies:
   flutter_test:
