feat: 更新 README，添加编译测试说明；修改依赖项，添加 mockito；新增 FitParser 测试

--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   fit_parser: ^2.0.0
   file_picker: ^9.1.0
   gpx: ^2.3.0
+  build_runner: ^2.4.15
 
 dev_dependencies:
   flutter_test:
@@ -56,6 +57,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  mockito: ^5.4.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
