--- a/app/android/app/src/main/AndroidManifest.xml
+++ b/app/android/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
     <uses-feature android:name="android.hardware.bluetooth" android:required="true"/>
     <uses-feature android:name="android.hardware.bluetooth_le" android:required="true"/>
     <application
-        android:label="app"
+        android:label="X-Nav"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
