--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flutter_map: ^8.1.1
   latlong2: ^0.9.1
   collection: ^1.19.1
+  fl_chart: ^0.70.2
 
 dev_dependencies:
   flutter_test:
