--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -28,12 +28,13 @@ dependencies:
   latlong2: ^0.9.1
   collection: ^1.19.1
   fl_chart: ^0.70.2
+  table_calendar: ^3.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
   mockito: ^5.4.5
 
 flutter:
