--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   collection: ^1.19.1
   fl_chart: ^0.70.2
   table_calendar: ^3.2.0
+  reorderables: ^0.6.0
+  http: ^1.3.0
+  flutter_polyline_points: ^2.1.0
 
 dev_dependencies:
   flutter_test:
