--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   reorderables: ^0.6.0
   http: ^1.3.0
   flutter_polyline_points: ^2.1.0
+  share_plus: ^10.1.4
 
 dev_dependencies:
   flutter_test:
