--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   http: ^1.3.0
   flutter_polyline_points: ^2.1.0
   share_plus: ^10.1.4
+  provider: ^6.1.4
 
 dev_dependencies:
   flutter_test:
