--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -13,27 +13,28 @@ dependencies:
     
   cupertino_icons: ^1.0.8
   flutter_blue_plus: ^1.32.12
-  permission_handler: ^11.3.1
+  permission_handler: ^12.0.0+1
   shared_preferences: ^2.5.2
-  geolocator: ^13.0.2
+  geolocator: ^14.0.0
   path_provider: ^2.1.5
   path: ^1.8.0
   xml: ^6.5.0
   fit_parser: ^2.0.0
-  file_picker: ^9.1.0
+  file_picker: ^10.1.2
   gpx: ^2.3.0
   build_runner: ^2.4.15
   sqflite: ^2.4.2
-  flutter_map: ^8.1.1
-  latlong2: ^0.9.1
+  flutter_map: any
+  latlong2: any
   collection: ^1.19.1
-  fl_chart: ^0.70.2
+  fl_chart: ^0.71.0
   table_calendar: ^3.2.0
   reorderables: ^0.6.0
   http: ^1.3.0
   flutter_polyline_points: ^2.1.0
   share_plus: ^10.1.4
   provider: ^6.1.4
+  flutter_map_heatmap: ^0.0.8
 
 dev_dependencies:
   flutter_test:
