--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   share_plus: ^10.1.4
   provider: ^6.1.4
   flutter_map_heatmap: ^0.0.8
+  flutter_map_tile_caching: ^10.0.0
 
 dev_dependencies:
   flutter_test:
