--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   provider: ^6.1.4
   flutter_map_heatmap: ^0.0.8
   flutter_map_tile_caching: ^10.0.0
+  archive: ^4.0.6
 
 dev_dependencies:
   flutter_test:
